<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_character_sheet"
            android:icon="@drawable/ic_menu_character_sheet"
            android:title="@string/menu_character_sheet" />

        <item
            android:id="@+id/nav_dice_roller"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_dice_roller" />

        <item
            android:id="@+id/nav_inventory_tracker"
            android:icon="@drawable/ic_menu_inventory"
            android:title="@string/menu_inventory_tracker" />

        <item
            android:id="@+id/nav_notes_and_logs"
            android:icon="@drawable/ic_menu_notes_and_logs"
        android:title="@string/menu_notes_and_logs" />

    </group>
</menu>